@@ -164,27 +164,27 @@ TAO/CIAO/CIDLC/CIDLC
 TAO/CIAO/ciao/CIAO_Client
 TAO/CIAO/ciao/CIAO_Container
 TAO/CIAO/ciaosvcs/Events/CIAO_Events_Base/CIAO_Events_Base
-TAO/CIAO/DAnCE/Deployment/Deployment_stub
+TAO/DAnCE/Deployment/Deployment_stub
 TAO/CIAO/ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent
 TAO/CIAO/ciaosvcs/Events/CIAO_Events
-TAO/CIAO/DAnCE/Deployment/Deployment_svnt
-TAO/CIAO/DAnCE/Interfaces/ExecutionManager_stub
-TAO/CIAO/DAnCE/DomainApplicationManager/DomainApplicationManager
+TAO/DAnCE/Deployment/Deployment_svnt
+TAO/DAnCE/Interfaces/ExecutionManager_stub
+TAO/DAnCE/DomainApplicationManager/DomainApplicationManager
 TAO/CIAO/ciao/CIAO_Server
-TAO/CIAO/DAnCE/ExecutionManager/ExecutionManager
-TAO/CIAO/DAnCE/Interfaces/NodeManager_stub
-TAO/CIAO/DAnCE/NodeApplication/Config_Manager
-TAO/CIAO/DAnCE/NodeApplication/NodeApp_Configurator
-TAO/CIAO/DAnCE/NodeApplication/NA_Configurator
-TAO/CIAO/DAnCE/NodeApplication/NoOp_Configurator
-TAO/CIAO/DAnCE/NodeApplication/NodeApplicationLib
-TAO/CIAO/DAnCE/NodeApplication/NodeApplication
-TAO/CIAO/DAnCE/NodeApplication/RTNA_Configurator
-TAO/CIAO/DAnCE/TargetManager/CIAO_TargetManager_stub
-TAO/CIAO/DAnCE/NodeApplicationManager/NodeApplicationManager
-TAO/CIAO/DAnCE/NodeManager/Monitor_Monitorlib
-TAO/CIAO/DAnCE/NodeManager/NodeManager_svnt
-TAO/CIAO/DAnCE/NodeManager/NodeManager
+TAO/DAnCE/ExecutionManager/ExecutionManager
+TAO/DAnCE/Interfaces/NodeManager_stub
+TAO/DAnCE/NodeApplication/Config_Manager
+TAO/DAnCE/NodeApplication/NodeApp_Configurator
+TAO/DAnCE/NodeApplication/NA_Configurator
+TAO/DAnCE/NodeApplication/NoOp_Configurator
+TAO/DAnCE/NodeApplication/NodeApplicationLib
+TAO/DAnCE/NodeApplication/NodeApplication
+TAO/DAnCE/NodeApplication/RTNA_Configurator
+TAO/DAnCE/TargetManager/CIAO_TargetManager_stub
+TAO/DAnCE/NodeApplicationManager/NodeApplicationManager
+TAO/DAnCE/NodeManager/Monitor_Monitorlib
+TAO/DAnCE/NodeManager/NodeManager_svnt
+TAO/DAnCE/NodeManager/NodeManager
 TAO/CIAO/tools/Config_Handlers/XSC_XML_Generation
 TAO/CIAO/tools/Config_Handlers/XSC_XML_Handlers
 TAO/CIAO/tools/Config_Handlers/Utils/CIAO_XML_Utils
@@ -196,24 +196,24 @@ TAO/CIAO/tools/Config_Handlers/RT-CCM/RT_CCM_XML_Generation
 TAO/CIAO/tools/Config_Handlers/RT-CCM/RT_CCM_Config_Handlers
 TAO/CIAO/tools/Config_Handlers/XSC_Config_Handlers
 TAO/CIAO/tools/Config_Handlers/Package_Handlers/Package_Config_Handlers
-TAO/CIAO/DAnCE/RepositoryManager/RepositoryManager
-TAO/CIAO/DAnCE/Plan_Generator/Plan_Generator
-TAO/CIAO/DAnCE/Utils/DAnCE_Utils
-TAO/CIAO/DAnCE/Plan_Launcher/Plan_Launcher_Impl
-TAO/CIAO/DAnCE/Plan_Launcher/Plan_Launcher
-TAO/CIAO/DAnCE/RepositoryManager/RMAdmin
-TAO/CIAO/DAnCE/StaticConfigurator/StaticDAnCEParser
-TAO/CIAO/DAnCE/TargetManager/CIAO_TargetManager_svnt
-TAO/CIAO/DAnCE/TargetManager/CIAO_TargetManager_exec
-TAO/CIAO/DAnCE/TargetManager/TMClient
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_stub
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_svnt
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_exec
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_dynamic
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_ex
-TAO/CIAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_simple
-TAO/CIAO/bin/PerlCIAO/PerlCIAO
+TAO/DAnCE/RepositoryManager/RepositoryManager
+TAO/DAnCE/Plan_Generator/Plan_Generator
+TAO/DAnCE/Utils/DAnCE_Utils
+TAO/DAnCE/Plan_Launcher/Plan_Launcher_Impl
+TAO/DAnCE/Plan_Launcher/Plan_Launcher
+TAO/DAnCE/RepositoryManager/RMAdmin
+TAO/DAnCE/StaticConfigurator/StaticDAnCEParser
+TAO/DAnCE/TargetManager/CIAO_TargetManager_svnt
+TAO/DAnCE/TargetManager/CIAO_TargetManager_exec
+TAO/DAnCE/TargetManager/TMClient
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_stub
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_svnt
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip_exec
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_dynamic
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_ex
+TAO/DAnCE/tests/NodeApplicationTest/NodeAppTest_client_simple
+TAO/bin/PerlCIAO/PerlCIAO
 TAO/CIAO/docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base_idl_gen
 TAO/CIAO/docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base_stub
 TAO/CIAO/docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base_skel
